# dnsm

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-client.yml  build-python.yml  build-server.yml  build-ws-server.yml  release-crates.yml  release-docker.yml  release-github.yml  release-pypi.yml  release.yml
docker/: Dockerfile.dnsm-client  Dockerfile.dnsm-server  Dockerfile.dnsm-ws  docker-compose.yml
python/dnsm/: __init__.py  _cli.py
scripts/: build_webassembly.sh  clean_rebuild.sh  combine_screenshots.sh
src/: lib.rs  tests.rs
tests/: dig_integration.rs  dig_mailbox_tcp.rs  dig_mailbox_txt.rs  ping_e2e.rs  tunnel_e2e.rs  wasm_build.rs  wasm_compat.rs
web/: index.html  package-lock.json  package.json
web/src/: App.svelte  main.js
web/src/lib/: utils.js
web/src/routes/: BrowserTest.svelte  Inbox.svelte  Splash.svelte
web/src/styles/: components.css  theme.css
