[package]
name = "dnsm"
version = "0.1.3"
edition = "2024"
authors = ["Raphael Martin <kontor@dnsm.re>"]
repository = "https://github.com/k-o-n-t-o-r/dnsm"
license = "MIT"
description = "Toolkit for covert data exfiltration using DNS"
readme = "README.md"
homepage = "https://dnsm.re"
keywords = ["gdpr", "itsec", "security", "exfiltration", "telemetry"]

[dependencies]
lzma-rust2 = "0.16.2"
blake3 = { version = "1.8.3" }

clap = { version = "4.6.0", features = [
    "derive",
    "wrap_help",
], optional = true }
console = { version = "0.16.3", optional = true }
fastrand = { version = "2.3.0", optional = true }

rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }
tokio = { version = "1.50.0", features = [
    "macros",
    "sync",
    "rt-multi-thread",
], optional = true }
tokio-stream = { version = "0.1.18", optional = true }
warp = { version = "0.4.2", features = [
    "websocket",
    "server",
], optional = true }
futures = { version = "0.3.32", default-features = false, optional = true }
base64 = { version = "0.22.1", optional = true }
serde_json = { version = "1.0.149", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[lib]
name = "dnsm"
crate-type = ["rlib", "cdylib"]

[features]
default = ["native-cli", "sqlite"]

native-cli = ["dep:clap", "dep:console", "dep:fastrand"]

sqlite = ["dep:rusqlite"]

ws-server = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:warp",
    "dep:futures",
    "dep:base64",
    "dep:serde_json",
    "dep:serde",
]

[dev-dependencies]
fastrand = "2.3.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[[bin]]
name = "dnsm-client"
path = "src/bin/dnsm_client.rs"
required-features = ["native-cli"]

[[bin]]
name = "dnsm-server"
path = "src/bin/dnsm_server/main.rs"
required-features = ["native-cli", "sqlite"]

[[bin]]
name = "dnsm-ws"
path = "src/bin/dnsm_ws.rs"
required-features = ["native-cli", "sqlite", "ws-server"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
blake3 = { version = "1.8.3", features = ["wasm32_simd"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.64"
